--- a/exercise1/ex1.html
+++ b/exercise1/ex1.html
@@ -4,7 +4,7 @@
 	<title></title>
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<link href="kahasbi.css" rel="stylesheet">
+	<link href="ex1.css" rel="stylesheet">
 </head>
 <body class="container">
     <div id="header">
@@ -36,7 +36,7 @@
         
     </div>
     <div id="footer">
-        Made By: Eko Sulistiawan
+        Made By: Eko
     <hr>
     </div>
 </body>
